2009-06-26  Florent Lamiraux  <florent@laas.fr>

	Move macro that finds boost numeric bindings.
	* CMakeLists.txt: here.

2009-06-26  Florent Lamiraux  <florent@laas.fr>

	Add a macro to look for boost numeric bindings.
	* CMakeLists.txt: Call the macro
	* CMakeModules/FindBoostNumericBindings.cmake: New.

2009-06-26  Florent Lamiraux  <florent@laas.fr>

	Remove obsolete headers.
	* include/MatrixAbstractLayer/abstract.h: Remove.
	* include/MatrixAbstractLayer/abstractMatrix.h: Remove.
	* include/MatrixAbstractLayer/abstractVector.h: Remove.
	* include/MatrixAbstractLayer/boost.h: Remove.
	* include/MatrixAbstractLayer/boostMacros.h: Remove.
	* include/MatrixAbstractLayer/boostMatrix.h: Remove.
	* include/MatrixAbstractLayer/boostMatrixSvd.h: Remove.
	* include/MatrixAbstractLayer/boostSvd.h: Remove.
	* include/MatrixAbstractLayer/boostVector.h: Remove.
	* include/MatrixAbstractLayer/boostspecific.h: Remove.
	These headers have been moved to StackOfTasks.

2009-06-26  Florent Lamiraux  <florent@laas.fr>

	Do not install mal2 headers anymore.
	* include/CMakeLists.txt: these headers have been moved
	to StackOfTasks.

2009-06-26  Florent Lamiraux  <florent@laas.fr>

	Remove unitTesting.
	* CMakeLists.txt,
	* unitTesting/CMakeLists.txt: Remove.
	* unitTesting/MatrixAbstractLayerTest.cpp: Remove.
	* unitTesting/MatrixAbstractLayerTest.h: Remove.
	* unitTesting/TimeUtilsWindows.cpp: Remove.
	* unitTesting/TimeUtilsWindows.h: Remove.
	* unitTesting/main.cpp: Remove.
	* unitTesting/performance.cpp: Remove.
	* unitTesting/tboost.cpp: Remove.
	* unitTesting/testdampedinverse.cpp: Remove.
	* unitTesting/testoptimizedJpJt.cpp: Remove.
	* unitTesting/testpseudoinverse.cpp: Remove.
	* unitTesting/tsvd.cpp: Remove.
	* unitTesting/tsvddamped.cpp: Remove.
	* unitTesting/tsvdpseudoinverse.cpp: Remove.
	UnitTesting have been moved to StackOfTasks.

2009-06-09 Nicolas Mansard <nmansard@laas.fr>

	Release 1.7.4 for StackOfTasks release 1.0.1.
	