@@ -8,11 +8,11 @@
 
 SET(BOOSTNUMERICBINDINGS_INCLUDE_PATH_DESCRIPTION "Directory containing the boost bindings for lapack")
 
-IF(${BOOSTNUMERICBINDINGS_DIR} STREQUAL "")
-  SET(BOOSTNUMERICBINDINGS_DIR_SEARCH $ENV{BOOSTNUMERICBINDINGS_ROOT})
-ELSE(${BOOSTNUMERICBINDINGS_DIR} STREQUAL "")
+IF(BOOSTNUMERICBINDINGS_DIR)
   SET(BOOSTNUMERICBINDINGS_DIR_SEARCH ${BOOSTNUMERICBINDINGS_DIR}/include)
-ENDIF(${BOOSTNUMERICBINDINGS_DIR} STREQUAL "")
+ELSE(BOOSTNUMERICBINDINGS_DIR)
+  SET(BOOSTNUMERICBINDINGS_DIR_SEARCH $ENV{BOOSTNUMERICBINDINGS_ROOT})
+ENDIF(BOOSTNUMERICBINDINGS_DIR)
 
 IF(BOOSTNUMERICBINDINGS_DIR_SEARCH)
   FILE(TO_CMAKE_PATH ${BOOSTNUMERICBINDINGS_DIR_SEARCH} BOOSTNUMERICBINDINGS_DIR_SEARCH)
